# benfitReminder

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
assets/brand/: README.md
docs/dev/: architecture.md
scripts/: build-desktop-icon.mjs  build-tray-icons.mjs  cleanup-duplicate-benefits.mjs  prep-brand-assets.mjs
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: logger.test.ts  logger.ts  metrics.test.ts  metrics.ts
src/models/: cardTypeLoader.test.ts  cardTypeLoader.ts  templates.test.ts  templates.ts  types.test.ts  types.ts
src/stores/: useCardStore.test.ts  useCardStore.ts  useCardTypeStore.test.ts  useCardTypeStore.ts  useToday.test.ts  useToday.ts
src/styles/: glass.css  theme.css
src/tauri/: bridge.ts  cardTypePersistence.test.ts  cardTypePersistence.ts  notifications.ts  persistence.ts  tray.test.ts  tray.ts
src/utils/: benefitDisplay.test.ts  benefitDisplay.ts  cycleKey.ts  cycles.test.ts  cycles.ts  migrations.test.ts  migrations.ts  period.test.ts  period.ts  propagate.test.ts  propagate.ts  reminder.test.ts  reminder.ts  roi.test.ts  roi.ts  rollover.test.ts  rollover.ts  subscription.test.ts  (+7 more)
tests/: e2e-flows.test.tsx  store-integration.test.ts  template-sync-integration.test.ts  tray-status-integration.test.ts  unused-includes-future-dated.test.ts
(+125 files in other folders)
